Control tamaño imagenes y spinner borrar reserva

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
         }
     </style>
 
-</head>
+<link rel="shortcut icon" href="./favicon.png"></head>
 
 
 <body>
@@ -83,7 +83,7 @@
     </div>
     <div id="snackbar">Una nueva versión esta disponible. Presione <a id="reload">Aqui</a> para actualizar.
     </div>
-</body>
+<script type="text/javascript" src="./app.bundle.js"></script></body>
 <script>
     window.scrollTo(0, 0)
     document.addEventListener('focusout', function (e) {
