--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
     </div>
     <div id="snackbar">Una nueva versión esta disponible. Presione <a id="reload">Aqui</a> para actualizar.
     </div>
-<script type="text/javascript" src="./app.bundle.js"></script></body>
+</body>
 <script>
     window.scrollTo(0, 0)
     document.addEventListener('focusout', function (e) {
