Subida a ikeargentina.com.ar

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
 
-    <link rel="icon" href="https://dimodo.ga/demos/mascotas/icon-iphone.png">
-    <link rel="apple-touch-icon" href="https://dimodo.ga/demos/mascotas/icon-iphone.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://dimodo.ga/demos/mascotas/icon-ipad.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://dimodo.ga/demos/mascotas/icon-retina.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="https://dimodo.ga/demos/mascotas/icon-ipadretina.png">
+    <link rel="icon" href="./icon-iphone.png">
+    <link rel="apple-touch-icon" href="./mascotas/icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./mascotas/icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./mascotas/icon-retina.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="./mascotas/icon-ipadretina.png">
     <meta name="apple-mobile-web-app-title" content="Ike-Mascotas">
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
