--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,25 @@
         }
     </style>
 
-<link rel="shortcut icon" href="./favicon.png"></head>
+    <link rel="shortcut icon" href="./favicon.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2V1WY3FYKQ"></script>
+
+    <script>
+
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag(){dataLayer.push(arguments);}
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-2V1WY3FYKQ');
+
+    </script>
+
+
+</head>
 
 
 <body>
