Inclusion de nuevos tags de google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,16 @@
 <!DOCTYPE html>
 <html translate="no">
 	<head>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-PDDZLHT');
+			</script>
+		<!-- End Google Tag Manager -->
+
+	
 		<title>IKE-Mascotas</title>
 		<!--    <link rel="manifest" href="manifest.json" /> -->
 		<meta charset="UTF-8" />
@@ -74,24 +84,25 @@
 		</style>
 
 		<link rel="shortcut icon" href="./favicon.png" />
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src=https://www.googletagmanager.com/gtag/js?id=UA-196399461-1></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+ 
+  gtag('config', 'UA-196399461-1');
+</script>
 
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-2V1WY3FYKQ"></script>
-
-		<script>
-			window.dataLayer = window.dataLayer || [];
-
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-
-			gtag("js", new Date());
-
-			gtag("config", "G-2V1WY3FYKQ");
-		</script>
 	</head>
 
 	<body>
+		
+			<!-- Google Tag Manager (noscript) -->
+			<noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-PDDZLHT
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			<!-- End Google Tag Manager (noscript) -->
+			
 		<view-manager></view-manager>
 		<div id="snackbarFondo"></div>
 		<div id="snackbar">Una nueva versión esta disponible. Presione <a id="reload">Aqui</a> para actualizar.</div>
