--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <!DOCTYPE html>
 <html translate="no">
 	<head>
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-			})(window,document,'script','dataLayer','GTM-PDDZLHT');
-			</script>
-		<!-- End Google Tag Manager -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-PDDZLHT');</script>
+	<!-- End Google Tag Manager -->
+	
 
 	
 		<title>IKE-Mascotas</title>
@@ -94,14 +94,18 @@
   gtag('config', 'UA-196399461-1');
 </script>
 
+
+
+
 	</head>
 
 	<body>
 		
-			<!-- Google Tag Manager (noscript) -->
-			<noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-PDDZLHT
-			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-			<!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-PDDZLHT
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
 			
 		<view-manager></view-manager>
 		<div id="snackbarFondo"></div>
